# x402-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: wallet-audit.yml
src/x402_python/: __init__.py  client.py  errors.py  header.py  parser.py  selector.py
tests/: test_client.py  test_header.py  test_parser.py  test_selector.py
